# basecampui

./: .gitignore  README.md  pyproject.toml  settings.ini  setup.py
basecampui/: _modidx.py  ai.py  all.py  chat.py  common.py  interactive.py  markdown.py  md.py  utils.py
fhbasecoat/: _modidx.py  all.py  chat.py  common.py  complex.py  interactive.py  markdown.py  utils.py
nbs/: 00_core.ipynb  00_utils.ipynb  00_utils_ref.ipynb  01_common.ipynb  01_common_dup1.ipynb  02_complex.ipynb  02_interactive.ipynb  03_chat.ipynb  03_markdown.ipynb  03_markdown_mistle.ipynb  04_chat.ipynb  04_demo.ipynb  05_aistudio.ipynb  demo.ipynb  documentation_site.ipynb  index.ipynb  nbdev.yml
static/: all.min.js  basecoat.cdn.min.css
